Set theme jekyll-theme-tactile

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: Neal Coleman's personal site
 description: Thoughts and experiments
-theme: jekyll-theme-minimal
+theme: jekyll-theme-tactile
