--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 title: Neal Coleman's personal site
 description: Thoughts and experiments
-theme: alembic-jekyll-theme
+theme: jekyll-theme-simple
+# theme: alembic-jekyll-theme
