--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 title: Neal Coleman's personal site
 description: Thoughts and experiments
-theme: jekyll-theme-simple
+theme: github-pages-minimal
 # theme: alembic-jekyll-theme
