--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@
 # title: Neal Coleman's personal site
 # description: Thoughts and experiments
 # theme: github-pages-minimal
-# theme: alembic-jekyll-theme
+
 
 # Site settings
 # These are used to personalize your new site. If you look in the HTML files,
@@ -32,7 +32,8 @@ github_username:  jekyll
 
 # Build settings
 markdown: kramdown
-theme: minima
+# theme: minima
+theme: alembic-jekyll-theme
 plugins:
   - jekyll-feed
 
