--- a/_config.yml
+++ b/_config.yml
@@ -9,12 +9,13 @@ exclude:
   - "/vendor/"
 
 # Site settings
-title: Centrarium
-subtitle: "A simple yet classy theme for your Jekyll website or blog"
-email: blcentra@gmail.com
-name: Ben Centra
+title: Thoughts
+subtitle: "Place where I put writing"
+email: "neal@curiouscolemans.net"
+name: "Neal Coleman"
 description: >
   A simple yet classy theme for your Jekyll website or blog.
+
 # Base URL of site (i.e. /blog). It should always start with a slash,
 # and never end with a slash. Set it to a blank value if hosting at the
 # root of your server.
