Hitting the ground running

--- a/_config.yml
+++ b/_config.yml
@@ -12,6 +12,7 @@ exclude:
 title: Thoughts
 subtitle: "Place where I put writing"
 email: "neal@curiouscolemans.net"
+twitter: @necoleman
 name: "Neal Coleman"
 description: >
   A simple yet classy theme for your Jekyll website or blog.
