--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,4 @@
 theme: jekyll-theme-slate
 
-title: Hey there!
-description: Welcome to Neal's website
-
+title: Itinerant Data Scientist
+description: Ideas: Rigorous, Reproducible, and Relevant
